--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,39 +3,33 @@ workflows:
     name: iOS Native Workflow
     max_build_duration: 120
     instance_type: mac_mini_m1
-    integrations:
-      app_store_connect: WagGo
+
     environment:
       ios_signing:
         distribution_type: app_store
         bundle_identifier: com.waggo.pettrack
       vars:
         BUNDLE_ID: "com.waggo.pettrack"
-        XCODE_WORKSPACE: WagGo.xcworkspace # <-- Put the name of your Xcode workspace here
-        XCODE_SCHEME: "WagGo" # <-- Put the name of your Xcode scheme here
+        XCODE_WORKSPACE: "WagGo.xcodeproj" # 如果不是 workspace，可改为 .xcodeproj
+        XCODE_SCHEME: "WagGo"
       xcode: 16.2
-      cocoapods: default
+
     scripts:
-#      - name: Install CocoaPods dependencies
-#        script: |
-#          pod install
-      - name: Set up provisioning profiles settings on Xcode project
+      - name: Set up provisioning profiles
         script: xcode-project use-profiles
-#      - name: Increment build number
-#        script: |
-#          cd $CM_BUILD_DIR
-#          LATEST_BUILD_NUMBER=$(app-store-connect get-latest-app-store-build-number "$APP_STORE_APPLE_ID")
-#          agvtool new-version -all $(($LATEST_BUILD_NUMBER + 1))
+
       - name: Build ipa for distribution
         script: |
           xcode-project build-ipa \
             --workspace "$CM_BUILD_DIR/$XCODE_WORKSPACE" \
             --scheme "$XCODE_SCHEME"
+
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+
     publishing:
       email:
         recipients:
@@ -43,16 +37,3 @@ workflows:
         notify:
           success: true
           failure: false
-      app_store_connect:
-        auth: integration
-
-        # Configuration related to TestFlight (optional)
-        # Note: This action is performed during post-processing.
-        submit_to_testflight: true
-        beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
-          - group name 1
-          - group name 2
-
-        # Configuration related to App Store (optional)
-        # Note: This action is performed during post-processing.
-        submit_to_app_store: true
